Source/WebCore/workers/WorkerScriptLoaderClient.h
@@ -27,6 +27,7 @@
 #pragma once
 
 #include "ResourceLoaderIdentifier.h"
+#include "ScriptExecutionContextIdentifier.h"
 
 namespace WebCore {
 
@@ -34,8 +35,8 @@ class ResourceResponse;
 
 class WorkerScriptLoaderClient : public CanMakeWeakPtr<WorkerScriptLoaderClient> {
 public:
-    virtual void didReceiveResponse(ResourceLoaderIdentifier, const ResourceResponse&) = 0;
-    virtual void notifyFinished() = 0;
+    virtual void didReceiveResponse(ScriptExecutionContextIdentifier, ResourceLoaderIdentifier, const ResourceResponse&) = 0;
+    virtual void notifyFinished(ScriptExecutionContextIdentifier) = 0;
 
 protected:
     virtual ~WorkerScriptLoaderClient() = default;
